better placeholder entries